--- a/.gitignore
+++ b/.gitignore
@@ -141,6 +141,9 @@ _TeamCity*
 *.coverage
 *.coveragexml
 
+# Cobertura coverage results
+coverage.cobertura.xml
+
 # NCrunch
 _NCrunch_*
 .*crunch*.local.xml
