--- a/.gitignore
+++ b/.gitignore
@@ -172,6 +172,9 @@ DocProject/Help/html
 # Click-Once directory
 publish/
 
+# output directory
+out/
+
 # Publish Web Output
 *.[Pp]ublish.xml
 *.azurePubxml
